<resources>
    <string name="app_name">UTAYA</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="this_is_profile">this is profile</string>
    <string name="this_is_profile_camera">This is profile camera</string>
    <string name="this_is_clock">this is clock</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="camera_x">camera x</string>
    <string name="Profile">Profile</string>
    <string name="change_password">Password</string>
    <string name="change_username">Username</string>
    <string name="merk">Merk</string>
    <string name="harga">Harga</string>
    <string name="link">Link</string>
    <string name="article">Article</string>
    <string name="riwayat">Riwayat</string>
    <string name="jenis_kulit">jenis kulit</string>

    <string-array name="data_merk">
        <item>Azarine</item>
        <item>Kahff</item>
        <item>Wardah</item>
        <item>Wardah</item>
        <item>Wardah</item>
        <item>Wardah</item>
    </string-array>
    <string-array name="data_harga">
        <item>Rp.100.000</item>
        <item>Rp.200.000</item>
        <item>Rp.300.000</item>
        <item>Rp.300.000</item>
        <item>Rp.300.000</item>
        <item>Rp.300.000</item>

    </string-array>
    <string-array name="data_link">
        <item>google.com</item>
        <item>youtube.com</item>
        <item>twitter.com</item>
        <item>twitter.com</item>
        <item>twitter.com</item>
        <item>twitter.com</item>

    </string-array>
    <string-array name="data_article">
        <item>Artikel 1</item>
        <item>Artikel 2</item>
        <item>Artikel 3</item>
        <item>Artikel 3</item>
        <item>Artikel 3</item>
        <item>Artikel 3</item>

    </string-array>
    <integer-array name="data_foto">
        <item>@drawable/azarine</item>
        <item>@drawable/kahff</item>
        <item>@drawable/wardah</item>
        <item>@drawable/wardah</item>
        <item>@drawable/wardah</item>
        <item>@drawable/wardah</item>

    </integer-array>


    <string-array name="data_skin">
        <item>Oily</item>
        <item>Dry</item>
        <item>Normal</item>
    </string-array>
    <string-array name="data_foto_skin">
        <item>@drawable/skin_oily</item>
        <item>@drawable/skin_oily</item>
        <item>@drawable/skin_oily</item>
    </string-array>
</resources>